--- a/app/public/css/home.css
+++ b/app/public/css/home.css
@@ -3,3 +3,21 @@ body{
     position: relative;
     min-height: 100vh;
   }
+
+  .homeStructure{
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+.homePrijzenCard{
+  display: flex;
+  width: 40%;
+  background-color: lightblue;
+  margin-top: 2.5%;
+}
+
+#prijzenCardTable{
+  margin-bottom: 0;
+}
