--- a/app/public/css/footer.css
+++ b/app/public/css/footer.css
@@ -17,12 +17,26 @@ footer {
 .footerInformation{
     width: 100%;
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-}
-.footerContactInformation{
-    display: flex;
     justify-content: center;
-    width: 25%;
+    flex-wrap: wrap;
+    gap: 2.5%;
+}
+.footerContactInformationLeft{
+    display: flex;
+    width: 40%;
+    align-items: center;
+    flex-direction: row-reverse;
+}
+
+.footerContactInformationRight{
+    display: flex;
+    width: 40%;
+    align-items: center;
+
+}
+
+.footerContactInformation p{
+  margin-left: 2.5%;
+  margin-top: 0;
+  margin-bottom: 0;
 }
