--- a/app/public/css/header.css
+++ b/app/public/css/header.css
@@ -7,15 +7,23 @@ ul.navigation {
     justify-content: space-between;
     list-style-type: none;
     overflow: hidden;
-    margin-top: -3.50%;
+    margin-top: -3.75%;
     padding: 0;
 }
 
 li.navigation {
-    padding-bottom: 3%;
-    padding-left: 2%;
-    padding-right: 2%;
+    padding-top: 3%;
+    padding-bottom: 2%;
+    padding-left: 3%;
+    padding-right: 3%;
+    border-radius: 20px 20px 0px 0px;
+}
+li.navigation:hover {
     background-color: red;
+}
+.navActive {
+    background-color: #CEDFED;
+    color: black !important;
 }
 
 div.navigation {
