--- a/app/public/css/header.css
+++ b/app/public/css/header.css
@@ -18,9 +18,7 @@ li.navigation {
     padding-right: 3%;
     border-radius: 20px 20px 0px 0px;
 }
-li.navigation:hover {
-    background-color: red;
-}
+
 .navActive {
     background-color: #CEDFED;
     color: black !important;
@@ -38,7 +36,7 @@ a.navigation {
     text-decoration: none;
 }
 
-li a:hover {
+li:hover {
     background-color: #CEDFED;
     color: black;
 }
