--- a/app/public/css/product.css
+++ b/app/public/css/product.css
@@ -43,6 +43,7 @@
 /* Detemines the size of a single product */
 #contentSingleProduct {
     width: 15%;
+    background-color:lightgoldenrodyellow;
 }
 
 /* Determines the location of the price in the product */
