--- a/app/public/css/contact.css
+++ b/app/public/css/contact.css
@@ -18,7 +18,35 @@
     flex-direction: row;
     justify-content: space-around;
     margin-top: 2.5%;
+}
 
+/* Contains information of the card 'Contact' */
+.contactContact {
+    padding: 2% 5%;
+    margin-left: 5%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 90%;
+    background-color: lightgrey;
+    flex-wrap: wrap;
+    border-radius: 2.5%;
+}
+.contactDetail {
+    justify-content: space-between;
+    width: 20%;
+}
+.contactPara {
+    margin: 0;
+    padding-left: 2%;
+    font-size: 150%;
+}
+.contactImage {
+    height: 40px;
+    width: auto;
+}
+.contactLink {
+    text-decoration: none;
 }
 
 /* Contains information of the card 'Locatie' */
@@ -45,6 +73,7 @@
     padding-bottom: 5%;
     padding-top: 5%;
     width: 100%;
+    height: 100px;
 }
 
 /* Contains information of the card 'Openingstijden'  */
@@ -60,6 +89,7 @@
 
 /* The Title of the card 'Openingstijden' */
 .contactTimeTableTitle {
+    height: 100px;
     display: flex;
     justify-content: center;
     background-color: lightgreen;
