--- a/app/public/css/footer.css
+++ b/app/public/css/footer.css
@@ -11,7 +11,6 @@ footer {
     background-color: #72A5CD;
     margin-top: 5%;
     height: 100px;
-    
 }
 
 .footerInformation{
@@ -32,15 +31,12 @@ footer {
     width: 40%;
     align-items: center;
     flex-direction: row-reverse;
-
-
 }
 
 .footerContactInformationLeft h6{
-
-
     margin-bottom: 0px;
     margin-left: 2.5%;
+    font-size: large;
 }
 
 .footerContactInformationRight h6{
