--- a/app/public/css/prijzen.css
+++ b/app/public/css/prijzen.css
@@ -1,5 +1,21 @@
 .prijzenStructure{
+    flex-wrap: wrap;
     display: flex;
-    margin: 5%;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    flex-direction: row;
+    margin-top: 5%;
+    margin-right: 5%;
+    margin-left: 5%;
+}
+.prijzenCard {
+    width: 40%;
+    display: flex;
+    background-color: lightblue;
+}
+.prijzenCard:last-child{
+    margin-top: 5%;
+    margin-left: 30%;
+}
+#prijzenCardTable {
+    margin-bottom: 0;
 }
