--- a/app/public/css/home.css
+++ b/app/public/css/home.css
@@ -4,36 +4,78 @@ body {
   min-height: 100vh;
 }
 
+.homeIntroText{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 75%;
+  margin: 2.5%;
+  margin-top: 0;
+  background-color: #CEDFED;
+}
+
+.homeIntroText h1{
+  font-size: 400%;
+ margin-left: 2%;
+}
+
 .homeStructure {
   display: flex;
-  flex-direction: row;
+  flex-direction: row-reverse;
   margin-top: 5%;
   margin-right: 5%;
   margin-left: 5%;
   flex-wrap: wrap;
-}
-.pricesAndImage {
-  display: flex;
-  flex-direction: column;
-  width: 25%;
-  background-color: #72A5CD;
-  border-radius: 5%;
-  padding: 2%;
-}
-.homeImage{
-  margin-top: 10%;
+  justify-content: space-around;
 }
 
-.homeMariaNila{
+.pricesAndImage {
   display: flex;
   width: 100%;
-  height: 250px;
-  justify-content: center;
-  background-color: #72A5CD;
+  border-radius: 5%;
+  padding: 2%;
+  padding-top: 0;
+  justify-content: space-between;
 }
-#carouselImage{
+
+.homeImage {
+  width: 25%;
+  background-color: #CEDFED;
+  margin: 2.5%;
+  margin-top: 0;
+}
+
+#carouselImage {
   width: 50%;
   display: flex;
   justify-content: center;
 }
 
+.homePrijzenCard {
+  display: flex;
+  width: 60%;
+  background-color: #CEDFED;
+}
+
+.homeIgeoImage{
+ width: 100%;
+ display: flex;
+ flex-direction: row;
+}
+
+.homeImageText{
+  width: 60%;
+  margin: 2%;
+  background-color: wheat;
+ }
+
+ .imageIgeo{
+  margin-left: 2%;
+  margin-bottom: 2%;
+  margin-top: 2%;
+
+}
+
+ .homeImageText p{
+  margin: 5%;
+ }
