--- a/app/public/css/footer.css
+++ b/app/public/css/footer.css
@@ -43,3 +43,9 @@ footer {
     margin-bottom: 0px;
     margin-right: 2.5%;
 }
+
+@media only screen and (max-width: 480px){
+    .footer{
+      display: none;
+    }
+  }
