--- a/app/public/css/product.css
+++ b/app/public/css/product.css
@@ -29,9 +29,14 @@
     display: flex;
     flex-direction: column;
 }
+#backgroundBadge{
+    background-color:  #8ec298;
+}
 
 /* The header text of a card */
 .productInformationText h3 {
+    display: flex;
+    justify-content: space-between;
     padding-bottom: 1%;
 }
 
