--- a/app/public/css/header.css
+++ b/app/public/css/header.css
@@ -90,7 +90,6 @@ li:last-child {
         align-items: center;
         justify-content: space-between;
         background-color: #72A5CD;
-        /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
         color: #FFF;
         height: 50px;
         padding: 1em;
@@ -168,7 +167,7 @@ li:last-child {
         .menu {
             position: absolute;
             top: 0;
-            margin-top: 50px;
+            margin-top: 23.5%;
             left: 0;
             flex-direction: column;
             width: 100%;
