--- a/app/public/css/contact.css
+++ b/app/public/css/contact.css
@@ -110,3 +110,16 @@
 .contactTableClosed{
     text-align: center;
 }
+
+@media only screen and (max-width: 480px) {
+
+    body {
+        background-color: #EDE6E6;
+        position: relative;
+        min-height: 100vh;
+    }
+
+    .contactStructure {
+        display: none;
+    }
+}
