--- a/app/public/css/header.css
+++ b/app/public/css/header.css
@@ -167,12 +167,13 @@ li:last-child {
         .menu {
             position: absolute;
             top: 0;
-            margin-top: 23.5%;
+            margin-top: 21.5%;
             left: 0;
             flex-direction: column;
             width: 100%;
             justify-content: center;
             align-items: center;
+            z-index: 1;
         }
 
         #menu-toggle~.menu li {
