--- a/app/public/css/prijzen.css
+++ b/app/public/css/prijzen.css
@@ -1,4 +1,4 @@
-.prijzenStructure{
+.prijzenStructure {
     flex-wrap: wrap;
     display: flex;
     justify-content: space-between;
@@ -7,15 +7,31 @@
     margin-right: 5%;
     margin-left: 5%;
 }
+
 .prijzenCard {
     width: 40%;
     display: flex;
     background-color: #CEDFED;
 }
-.prijzenCard:last-child{
+
+.prijzenCard:last-child {
     margin-top: 5%;
     margin-left: 30%;
 }
+
 #prijzenCardTable {
     margin-bottom: 0;
+}
+
+@media only screen and (max-width: 480px) {
+
+    body {
+        background-color: #EDE6E6;
+        position: relative;
+        min-height: 100vh;
+    }
+
+    .prijzenStructure {
+        display: none;
+    }
 }
