--- a/app/public/css/product.css
+++ b/app/public/css/product.css
@@ -67,3 +67,16 @@
     flex-direction: column;
     background-color: #CEDFED;
 }
+
+@media only screen and (max-width: 480px) {
+
+    body {
+      background-color: #EDE6E6;
+      position: relative;
+      min-height: 100vh;
+    }
+  
+    .productStructure {
+      display: none;
+    }
+  }
