--- a/app/public/css/footer.css
+++ b/app/public/css/footer.css
@@ -57,17 +57,15 @@ footer {
       display: none;
     }
 
-    .hamburgerFooter {
-        width: 100%;
-        bottom: 0;
-        height: 0;
-        position: absolute;
-    }
+    
+    
     .hamburgerFooterInformation{
         display: flex;
         justify-content: space-around;
         background-color: #72A5CD;
         height: 75px;
         align-items: center;
+        position:initial;
+        margin-top: 10%;
     }
   }
