--- a/app/public/css/header.css
+++ b/app/public/css/header.css
@@ -73,11 +73,6 @@ li:last-child {
         text-align: center;
     }
 
-    html,
-    body {
-        margin: 0;
-        height: 100%;
-    }
 
     * {
         font-family: "Raleway";
@@ -94,6 +89,7 @@ li:last-child {
         height: 50px;
         padding: 1em;
         margin-top: -4.75%;
+        border-bottom: 1px solid #333;
     }
 
     .menu {
@@ -185,7 +181,7 @@ li:last-child {
         }
 
         #menu-toggle:checked~.menu li {
-            border: 1px solid #333;
+            border-bottom: 1px solid #333;
             height: 2.5em;
             padding: 0.5em;
             transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
@@ -198,7 +194,7 @@ li:last-child {
             padding: 0.5em 0;
             width: 100%;
             color: white;
-            background-color: #CEDFED;
+            background-color: #CEDFED
         }
 
         .menu>li:not(:last-child) {
