--- a/app/public/css/product.css
+++ b/app/public/css/product.css
@@ -68,15 +68,39 @@
     background-color: #CEDFED;
 }
 
-@media only screen and (max-width: 480px) {
+.contentImages img{
+    /* max-height: 180px; */
+}
 
-    body {
-      background-color: #EDE6E6;
-      position: relative;
-      min-height: 100vh;
+@media only screen and (min-width: 481px) {
+    .hamburgerProductStructure {
+      display: none;
     }
-  
+  }
+
+@media only screen and (max-width: 480px) {
     .productStructure {
       display: none;
     }
+
+    .hamburgerProductStructure {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        margin-top: 5%;
+      }
+
+      .hamburgerProductStructure .card{
+        width: 40%;
+      }
+
+      .hamburgerProductStructure .card p{
+        font-size: 75%;
+      }
+
+      .hamburgerProductStructure .card img{
+        min-height: 250px;
+      }
   }
