--- a/app/public/css/prijzen.css
+++ b/app/public/css/prijzen.css
@@ -22,16 +22,35 @@
 #prijzenCardTable {
     margin-bottom: 0;
 }
+@media only screen and (min-width: 481px) {
+    .hamburgerprijzenStructure {
+        display: none;
+    }
+}
 
 @media only screen and (max-width: 480px) {
-
-    body {
-        background-color: #EDE6E6;
-        position: relative;
-        min-height: 100vh;
-    }
-
     .prijzenStructure {
         display: none;
+    }
+
+    .hamburgerprijzenStructure{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 10%;
+        margin-bottom: 0;
+    }
+    .prijzenCard{
+        width: 80%;
+        margin-bottom: 5%;
+    }
+
+    .prijzenCard th{
+        width: 100%;
+    }
+
+    .prijzenCard:last-child{
+        margin-left: 0;
+        margin-top: 0;
     }
 }
