--- a/app/public/css/header.css
+++ b/app/public/css/header.css
@@ -81,14 +81,12 @@ li:last-child {
 
     .hamburgerNavBar{
         display: flex;
-        flex-direction: row-reverse;
         align-items: center;
         justify-content: space-between;
         background-color: #72A5CD;
         color: #FFF;
         height: 50px;
         padding: 1em;
-        margin-top: -4.75%;
         border-bottom: 1px solid #333;
     }
 
@@ -163,7 +161,7 @@ li:last-child {
         .menu {
             position: absolute;
             top: 0;
-            margin-top: 21.5%;
+            margin-top: 50px;
             left: 0;
             flex-direction: column;
             width: 100%;
