--- a/app/public/css/footer.css
+++ b/app/public/css/footer.css
@@ -1,10 +1,11 @@
+/* the footer */
 footer {
     width: 100%;
     bottom: 0;
     height: 0;
     position: absolute;
 }
-
+/* a footer div inside the footer */
 .footer {
     display: flex;
     justify-content: space-between;
@@ -12,7 +13,7 @@ footer {
     margin-top: 5%;
     height: 100px;
 }
-
+/* a div inside the footer div inside the footer */
 .footerInformation{
     width: 100%;
     display: flex;
@@ -20,25 +21,26 @@ footer {
     flex-wrap: wrap;
     gap: 2.5%;
 }
+/* a left floating div inside a div inside the footer div inside the footer */
 .footerContactInformationLeft{
     display: flex;
     width: 40%;
     align-items: center;
 }
-
+/* a right floating div inside a div inside the footer div inside the footer */
 .footerContactInformationRight{
     display: flex;
     width: 40%;
     align-items: center;
     flex-direction: row-reverse;
 }
-
+/* a title inside a left floating div inside a div inside the footer div inside the footer */
 .footerContactInformationLeft h6{
     margin-bottom: 0px;
     margin-left: 2.5%;
     font-size: large;
 }
-
+/* a title inside a right floating div inside a div inside the footer div inside the footer */
 .footerContactInformationRight h6{
     margin-bottom: 0px;
     margin-right: 2.5%;
