--- a/app/public/css/footer.css
+++ b/app/public/css/footer.css
@@ -46,28 +46,51 @@ footer {
     margin-right: 2.5%;
 }
 
+/* media screen for mobile */
+@media only screen and (max-width: 480px)  {
+    .footer{
+        display: none;
+      }
+      
+      .hamburgerFooterInformation{
+          display: flex;
+          justify-content: space-around;
+          background-color: #72A5CD;
+          height: 75px;
+          align-items: center;
+          position:initial;
+          margin-top: 5%;
+      }
+}
 
-@media only screen and (min-width: 480px){
-    
+
+/* media screen for tablets */
+@media only screen and (min-width: 481px) and (max-width: 768px)  {
     .hamburgerFooterInformation{
         display: none;
     }
-  }
+}
 
-@media only screen and (max-width: 480px){
-    .footer{
-      display: none;
-    }
-
-    
-    
+/* media screen for smalscreen, laptops */
+@media only screen and (min-width: 769px) and (max-width: 1024px)  {
     .hamburgerFooterInformation{
-        display: flex;
-        justify-content: space-around;
-        background-color: #72A5CD;
-        height: 75px;
-        align-items: center;
-        position:initial;
-        margin-top: 5%;
+        display: none;
     }
-  }
+
+}
+
+/* media screen for Desktops, large screens */
+@media only screen and (min-width: 1025px) and (max-width: 1200px)  {
+    .hamburgerFooterInformation{
+        display: none;
+    }
+
+}
+
+/* media screen for extra large screens */
+@media only screen and (min-width: 1201px) {
+    .hamburgerFooterInformation{
+        display: none;
+    }
+
+}
