--- a/app/public/css/home.css
+++ b/app/public/css/home.css
@@ -80,15 +80,8 @@ body {
   margin: 5%;
 }
 
-
-
-@media only screen and (min-width: 481px) {
-  .hamburgerHomeStructure {
-    display: none;
-  }
-}
-
-@media only screen and (max-width: 480px) {
+/* media screen for mobile */
+@media only screen and (max-width: 480px)  {
   .homeStructure {
     display: none;
   }
@@ -129,4 +122,36 @@ body {
     width: 100%;
     margin: 0;
   }
+}
+
+
+/* media screen for tablets */
+@media only screen and (min-width: 481px) and (max-width: 768px)  {
+  .hamburgerHomeStructure {
+    display: none;
+  }
+}
+
+/* media screen for smalscreen, laptops */
+@media only screen and (min-width: 769px) and (max-width: 1024px)  {
+  .hamburgerHomeStructure {
+    display: none;
+  }
+
+}
+
+/* media screen for Desktops, large screens */
+@media only screen and (min-width: 1025px) and (max-width: 1200px)  {
+  .hamburgerHomeStructure {
+    display: none;
+  }
+
+}
+
+/* media screen for extra large screens */
+@media only screen and (min-width: 1201px) {
+  .hamburgerHomeStructure {
+    display: none;
+  }
+
 }
