--- a/app/public/css/prijzen.css
+++ b/app/public/css/prijzen.css
@@ -22,13 +22,9 @@
 #prijzenCardTable {
     margin-bottom: 0;
 }
-@media only screen and (min-width: 481px) {
-    .hamburgerprijzenStructure {
-        display: none;
-    }
-}
 
-@media only screen and (max-width: 480px) {
+/* media screen for mobile */
+@media only screen and (max-width: 480px)  {
     .prijzenStructure {
         display: none;
     }
@@ -53,4 +49,36 @@
         margin-left: 0;
         margin-top: 0;
     }
+}
+
+
+/* media screen for tablets */
+@media only screen and (min-width: 481px) and (max-width: 768px)  {
+    .hamburgerprijzenStructure {
+        display: none;
+    }
+}
+
+/* media screen for smalscreen, laptops */
+@media only screen and (min-width: 769px) and (max-width: 1024px)  {
+   
+    .hamburgerprijzenStructure {
+        display: none;
+    }
+}
+
+/* media screen for Desktops, large screens */
+@media only screen and (min-width: 1025px) and (max-width: 1200px)  {
+    .hamburgerprijzenStructure {
+        display: none;
+    }
+
+}
+
+/* media screen for extra large screens */
+@media only screen and (min-width: 1201px) {
+    .hamburgerprijzenStructure {
+        display: none;
+    }
+
 }
