--- a/app/public/css/prijzen.css
+++ b/app/public/css/prijzen.css
@@ -1,22 +1,20 @@
+
 .prijzenStructure {
     flex-wrap: wrap;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     flex-direction: row;
     margin-top: 5%;
-    margin-right: 5%;
-    margin-left: 5%;
+}
+
+.prijzenCard:last-child{
+    margin-top: 2.5%;
 }
 
 .prijzenCard {
     width: 40%;
     display: flex;
     background-color: #CEDFED;
-}
-
-.prijzenCard:last-child {
-    margin-top: 5%;
-    margin-left: 30%;
 }
 
 #prijzenCardTable {
@@ -45,10 +43,7 @@
         width: 100%;
     }
 
-    .prijzenCard:last-child{
-        margin-left: 0;
-        margin-top: 0;
-    }
+    
 }
 
 
@@ -56,6 +51,26 @@
 @media only screen and (min-width: 481px) and (max-width: 768px)  {
     .hamburgerprijzenStructure {
         display: none;
+    }
+
+    .prijzenCard{
+        width: 90%;
+        margin-bottom: 5%;
+    }
+
+    .prijzenStructure {
+        flex-wrap: wrap;
+        display: flex;
+        justify-content: center;
+        flex-direction: row;
+        margin-top: 5%;
+        margin-right: 5%;
+        margin-left: 5%;
+    }
+
+    
+    .prijzenCard th{
+        width: 100%;
     }
 }
 
@@ -65,6 +80,17 @@
     .hamburgerprijzenStructure {
         display: none;
     }
+
+    
+
+    .prijzenCard {
+        width: 45%;
+        display: flex;
+        background-color: #CEDFED;
+    }
+    
+    
+    
 }
 
 /* media screen for Desktops, large screens */
@@ -73,12 +99,25 @@
         display: none;
     }
 
+   
+    
 }
 
 /* media screen for extra large screens */
-@media only screen and (min-width: 1201px) {
+@media only screen and (min-width: 1201px) and (max-width: 1920px){
     .hamburgerprijzenStructure {
         display: none;
     }
 
+}
+
+/* For Projectors or Higher Resolution Screens (Full HD) */
+@media screen and (min-width: 1901px) {
+    .hamburgerprijzenStructure {
+        display: none;
+    }
+
+    .prijzenCard tr{
+        font-size: 150%;
+    }
 }
