logo removed bg

--- a/app/public/css/contact.css
+++ b/app/public/css/contact.css
@@ -150,6 +150,10 @@
         width: 90%;
     }
 
+    .contactLocation iframe{
+        width: 90%;
+    }
+
     .contactTimeSlots {
         margin-top: 10%;
         width: 90%;
