--- a/app/public/css/header.css
+++ b/app/public/css/header.css
@@ -189,7 +189,7 @@ li:last-child {
             border-bottom: 1px solid #444;
         }
     }
-    .test{
+    .logo{
         border-radius: 50%;
     }
 }
